--- a/index.ipynb
+++ b/index.ipynb
@@ -278,14 +278,14 @@
     "# use break and continue statements in your code\n",
     "list_of_numbers = list(range(0,100))\n",
     "list_of_odd_numbers_plus_ten = []\n",
-    "incr \n",
+    "incr = 0\n",
     "for number in list_of_numbers:\n",
     "    if number % 2 != 0:\n",
     "        number += 10\n",
     "        list_of_odd_numbers_plus_ten.append(number)\n",
     "        incr += 1\n",
     "        continue\n",
-    "    "
+    "    if incr"
    ]
   },
   {
