--- a/index.ipynb
+++ b/index.ipynb
@@ -285,7 +285,7 @@
     "        list_of_odd_numbers_plus_ten.append(number)\n",
     "        incr += 1\n",
     "        continue\n",
-    "    if incr"
+    "    if incr ="
    ]
   },
   {
