--- a/index.ipynb
+++ b/index.ipynb
@@ -268,15 +268,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-38-737ce8a3ac0b>, line 14)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-38-737ce8a3ac0b>\"\u001b[0;36m, line \u001b[0;32m14\u001b[0m\n\u001b[0;31m    elif incr = 10:\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 13, 15, 17, 19, 21, 23, 25, 27, 29]\n"
      ]
     }
    ],
@@ -294,7 +293,7 @@
     "        list_of_odd_numbers_plus_ten.append(number)\n",
     "        incr += 1\n",
     "        continue\n",
-    "    elif incr = 10:\n",
+    "    elif incr == 10:\n",
     "        print(list_of_odd_numbers_plus_ten)\n",
     "        break"
    ]
